# personal_website

./: .gitignore  CNAME  LICENSE  README.md  article-template.html  index.html  pyproject.toml
articles/: hope-for-tomorrow.html  human-ai-workforce.html  once-in-a-generation.html  sovereign-ai.html
scripts/: humans_and_llm_trust.py
