[project]
name = "personal-website-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "ar-mccabe",email = "adam.r.mccabe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
